# kitkat-001

./: .env.example  .gitignore  Makefile  Procfile  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization.md  1-2-database-foundation.md  1-3-webhook-endpoint-with-authentication.md  1-4-signal-payload-parsing-validation.md  1-5-signal-deduplication.md  1-6-rate-limiting.md  2-1-dex-adapter-interface.md  2-10-wallet-disconnect-revocation.md  2-11-graceful-shutdown.md  2-2-user-session-management.md  2-3-wallet-connection-signature.md  2-4-webhook-url-generation.md  2-5-extended-adapter-connection.md  2-6-extended-adapter-order-execution.md  2-7-retry-logic-with-exponential-backoff.md  2-8-execution-logging-partial-fills.md  2-9-signal-processor-fan-out.md  3-1-test-mode-feature-flag.md  3-2-mock-dex-adapter.md  3-3-dry-run-execution-output.md  4-1-health-service-dex-status.md  4-2-telegram-alert-service.md  4-3-auto-recovery-after-outage.md  4-4-error-logging-with-full-context.md  4-5-error-log-viewer.md  5-1-stats-service-volume-tracking.md  5-2-volume-display-today-week.md  5-3-execution-count-success-rate.md  5-4-dashboard-endpoint.md  5-5-onboarding-checklist.md  5-6-position-size-configuration.md  5-7-webhook-url-payload-display.md  (+13 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
tests/: __init__.py  conftest.py  test_database.py  test_logging.py  test_project_init.py  test_signal_payload.py  test_webhook.py
(+131 files in other folders)
